AUTOMAKE_OPTIONS=foreign

bin_PROGRAMS=customer_credit_check

customer_credit_check_SOURCES=src/curl_client.hpp src/client_http.hpp src/renesolalog.hpp src/serverResource.hpp src/main.cpp src/mysql/MySql.cpp src/mysql/MySqlException.cpp src/mysql/MySqlPreparedStatement.cpp src/mysql/OutputBinder.cpp
customer_credit_check_LDADD=lib/librestbed.a